--- a/app/src/main/res/layout/activity_producto.xml
+++ b/app/src/main/res/layout/activity_producto.xml
@@ -6,9 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.Producto">
+
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="108dp"
+        tools:layout_editor_absoluteY="299dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -19,18 +23,19 @@
             app:layout_constraintTop_toTopOf="parent">
 
 
-
-            <TextView
-                android:id="@+id/linea14"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:background="@drawable/blue_rectangle"
+            <Button
+                android:id="@+id/buttonProductoComplementario"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="64dp"
+                android:text="Button"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="MissingConstraints" />
+                app:layout_constraintStart_toEndOf="@+id/imageProductoComplementario"
+                app:layout_constraintTop_toBottomOf="@+id/tvNombreProductoComplementario" />
 
             <ImageButton
                 android:id="@+id/imageButton"
@@ -43,6 +48,57 @@
                 app:layout_constraintTop_toBottomOf="@+id/linea14"
                 app:srcCompat="@drawable/ic_flecha_back"
                 tools:ignore="VectorDrawableCompat" />
+
+            <ImageView
+                android:id="@+id/imageProducto"
+                android:layout_width="300dp"
+                android:layout_height="200dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/linea15"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <ImageView
+                android:id="@+id/imageProductoComplementario"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="64dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView16"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <LinearLayout
+                android:id="@+id/productButtonLY"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="8dp"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="@+id/imageProducto"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/imageProducto"
+                app:layout_constraintTop_toBottomOf="@+id/imageProducto">
+               
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/linea14"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:background="@drawable/blue_rectangle"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints" />
 
             <TextView
                 android:id="@+id/tvNombreProducto"
@@ -70,85 +126,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvNombreProducto" />
 
-            <ImageView
-                android:id="@+id/imageProducto"
-                android:layout_width="300dp"
-                android:layout_height="200dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/linea15"
-                tools:srcCompat="@tools:sample/avatars" />
-
-            <Button
-                android:id="@+id/buttIndicProducto"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="Indicaciones"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toStartOf="@+id/buttonBenefProducto"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageProducto" />
-
-            <Button
-                android:id="@+id/buttonBenefProducto"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="Beneficios"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toStartOf="@+id/buttonInfoProducto"
-                app:layout_constraintStart_toEndOf="@+id/buttIndicProducto"
-                app:layout_constraintTop_toBottomOf="@+id/imageProducto" />
-
-            <Button
-                android:id="@+id/buttonInfoProducto"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="Información"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toStartOf="@+id/buttonFormatProducto"
-                app:layout_constraintStart_toEndOf="@+id/buttonBenefProducto"
-                app:layout_constraintTop_toBottomOf="@+id/imageProducto" />
-
-            <Button
-                android:id="@+id/buttonFormatProducto"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="Formato"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/buttonInfoProducto"
-                app:layout_constraintTop_toBottomOf="@+id/imageProducto" />
-
-            <TextView
-                android:id="@+id/tvProductoData"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:text="TextView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/buttonInfoProducto" />
-
             <TextView
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="32dp"
                 android:text="Consejos de Uso"
                 android:textColor="@color/principalBlue"
                 android:textSize="24sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvProductoData" />
+                app:layout_constraintTop_toBottomOf="@+id/productButtonLY" />
 
             <TextView
                 android:id="@+id/tvConsejosUso"
@@ -174,18 +162,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvConsejosUso" />
 
-            <ImageView
-                android:id="@+id/imageProductoComplementario"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="64dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView16"
-                tools:srcCompat="@tools:sample/avatars" />
-
             <TextView
                 android:id="@+id/tvNombreProductoComplementario"
                 android:layout_width="0dp"
@@ -200,23 +176,8 @@
                 app:layout_constraintStart_toEndOf="@+id/imageProductoComplementario"
                 app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
-            <Button
-                android:id="@+id/buttonProductoComplementario"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="64dp"
-                android:text="Button"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageProductoComplementario"
-                app:layout_constraintTop_toBottomOf="@+id/tvNombreProductoComplementario" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
