--- a/app/src/main/res/layout/activity_mi_cuenta.xml
+++ b/app/src/main/res/layout/activity_mi_cuenta.xml
@@ -62,6 +62,8 @@
                 android:text="Mi Cuenta"
                 android:textColor="@android:color/black"
                 android:textSize="36sp"
+                android:fontFamily="@font/sourcesanspro_bold"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -105,6 +107,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/telefonoMICuenta" />
 
             <TextView
+                android:fontFamily="@font/sourcesanspro_black"
                 android:id="@+id/SaldoBioCoins"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
@@ -129,16 +132,18 @@
                 tools:ignore="VectorDrawableCompat" />
 
             <TextView
+                android:fontFamily="@font/sourcesanspro_bold"
                 android:id="@+id/NombreNivel"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                android:text="nombre "
+                android:text="nombre"
                 android:textColor="@android:color/black"
                 android:textSize="24sp"
-                android:textStyle="bold"
+
                 android:textAlignment="center"
                 android:gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -146,11 +151,12 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
             <TextView
+                android:fontFamily="@font/sourcesanspro_bold"
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Correo Electronico"
-                android:textColor="@color/principalBlue"
+                android:textColor="#334B68"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -170,6 +176,7 @@
                 app:srcCompat="@drawable/ic_telefono" />
 
             <TextView
+                android:fontFamily="@font/sourcesanspro_bold"
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -177,7 +184,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="Teléfono Celular"
-                android:textColor="@color/principalBlue"
+                android:textColor="#334B68"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
