--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -38,11 +38,11 @@
 
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_semibold"
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
+                android:fontFamily="@font/sourcesanspro_semibold"
                 android:text="Club"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
@@ -103,12 +103,11 @@
                 android:id="@+id/linea"
                 android:layout_width="0dp"
                 android:layout_height="2dp"
-                android:layout_marginTop="28dp"
                 android:background="#334D6B"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/Orotxt" />
+                tools:layout_editor_absoluteY="679dp" />
 
 
             <LinearLayout
@@ -138,7 +137,6 @@
 
                     android:cropToPadding="false"
                     android:paddingBottom="20dp"
-
 
 
                     app:layout_constraintTop_toBottomOf="@+id/textView13"
@@ -200,17 +198,16 @@
                 android:layout_marginStart="75dp"
 
                 android:layout_marginTop="26dp"
-                android:layout_marginBottom="8dp"
                 android:fontFamily="@font/sourcesanspro_bold"
                 android:text="Cupones"
                 android:textAlignment="center"
                 android:textColor="#334D6B"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/linearLayout"
-                app:layout_constraintHorizontal_bias="0.505"
+                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="@+id/linearLayout"
                 app:layout_constraintTop_toTopOf="@+id/linearLayout"
-                app:layout_constraintVertical_bias="0.465" />
+                app:layout_constraintVertical_bias="0.143" />
 
             <TextView
                 android:id="@+id/Platatxt"
@@ -235,7 +232,7 @@
                 android:id="@+id/Platinotxt"
                 android:layout_width="49dp"
                 android:layout_height="16dp"
-                android:layout_marginStart="33dp"
+                android:layout_marginStart="34dp"
 
 
                 android:fontFamily="@font/sourcesanspro_bold"
@@ -251,7 +248,7 @@
                 android:id="@+id/Broncetxt"
                 android:layout_width="61dp"
                 android:layout_height="17dp"
-                android:layout_marginEnd="23dp"
+                android:layout_marginEnd="21dp"
 
                 android:fontFamily="@font/sourcesanspro_bold"
                 android:text="Historial"
@@ -279,12 +276,12 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_regular"
                 android:id="@+id/NombreNivel"
                 android:layout_width="106dp"
                 android:layout_height="32dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
+                android:fontFamily="@font/sourcesanspro_regular"
                 android:gravity="center"
                 android:text="Bronce"
                 android:textAlignment="center"
@@ -296,11 +293,11 @@
                 app:layout_constraintTop_toBottomOf="@+id/Nivel" />
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_regular"
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/sourcesanspro_regular"
                 android:text="BioCoins Disponibles"
                 android:textColor="#334D6B"
                 android:textSize="15dp"
@@ -333,12 +330,12 @@
                 app:srcCompat="@drawable/ic_bronceclub" />
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_semibold"
                 android:id="@+id/CantidadCoins"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="38dp"
                 android:layout_marginEnd="16dp"
+                android:fontFamily="@font/sourcesanspro_semibold"
                 android:text="TextView"
                 android:textColor="#000"
                 app:layout_constraintBottom_toBottomOf="@+id/Nivel"
@@ -347,15 +344,15 @@
                 app:layout_constraintVertical_bias="1.0" />
 
             <TextView
-                android:fontFamily="@font/sourcesanspro_light"
-                android:textStyle="bold"
                 android:id="@+id/DescNivel"
                 android:layout_width="203dp"
                 android:layout_height="39dp"
                 android:layout_marginTop="4dp"
+                android:fontFamily="@font/sourcesanspro_light"
                 android:text="Consigue 100 BioCoins para llegar a plata"
                 android:textAlignment="center"
                 android:textColor="#000"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/NombreNivel"
                 app:layout_constraintStart_toStartOf="@+id/NombreNivel"
                 app:layout_constraintTop_toBottomOf="@+id/NombreNivel" />
@@ -380,8 +377,8 @@
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/sourcesanspro_bold"
                 android:text="Beneficios por niveles"
-                android:textSize="20dp"
                 android:textColor="#334D6B"
+                android:textSize="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linea19" />
