--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -187,9 +187,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonCancelar" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonCancelar" /><![CDATA[
+
     "
         android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp" />
 
+]]>
 </androidx.constraintlayout.widget.ConstraintLayout>
